--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
                <div class="card-group">
                     <div class="card">
                          <div class="card-body">
-                              <video class="card-img-top" controls poster="./asserts/images/16773429261209.webp">
-                                   <source src="./asserts/videos/pexels-eleonora-sky-9905272 (360p).mp4"
-                                        type="video/mp4">
-                              </video>
+                              <img src="./asserts/images/co1675dlqsilsr3kue1g.jpg" class="card-img-top">
                               <h5 class="card-title text-light">Aquaman</h5>
                               <p class="card-text">Arthur Curry, the human-born heir to the underwater kingdom of
                                    Atlantis, goes on a quest to prevent a war between the worlds of ocean and land.</p>
@@ -41,7 +38,7 @@
                     </div>
                     <div class="card">
                          <div class="card-body">
-                              <img src="./asserts/images/Без названия (1).jpg" class="card-img-top" alt="...">
+                              <img src="./asserts/images/cm77imhs99ouqbfp46q0.jpg" class="card-img-top" alt="...">
                               <br><br>
                               <h5 class="card-title text-light">Avatar</h5>
                               <p class="card-text">Avatar (marketed as James Cameron's Avatar) is a 2009 epic science
@@ -62,7 +59,7 @@
                     </div>
                     <div class="card">
                          <div class="card-body">
-                              <img src="./asserts/images/pirates-1-1678290544034.jpg" class="card-img-top">
+                              <img src="./asserts/images/co166ndlqsilsr3kudsg.jpg" class="card-img-top">
                               <br><br>
                               <h5 class="card-title text-light">Pirates of Caribean</h5>
                               <p class="card-text">Pirates of the Caribbean is an American fantasy supernatural
