feat:animation when hover

--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,9 @@
         
         <div class="flex justify-center md:justify-end">
           <a href="" class="mr-4 text-base uppercase font-bold px-2 py-3 cursor-pointer md:border-red-400 border-2 rounded-2xl md:text-red-400
-          hover:text-white hover:bg-red-400">Login</a>
+          hover:text-white hover:bg-red-400 transition ease-out duration-500">Login</a>
           <a href="" class="mr-4 text-base uppercase font-bold px-2 py-3 cursor-pointer md:border-red-400 border-2 rounded-2xl md:text-red-400
-          hover:text-white hover:bg-red-400">Sign up</a>
+          hover:text-white hover:bg-red-400 transition ease-out duration-500">Sign up</a>
         </div>
 
         <header>
@@ -134,7 +134,8 @@
        
 
         <div class="flex justify-center">
-          <div class="bg-neutral-600 sm:bg-red-500 md:bg-blue-600 lg:bg-yellow-500 xl:bg-orange-800">Load more</div>
+          <div class="bg-slate-300 rounded-md text-gray-600 transform hover:scale-125
+          transition ease-in duration-100 hover:bg-opacity-10">Load more</div>
           <ul class="list-unstyled d-flex">
             <li class="ms-3"><a class="link-body-emphasis" href="https://github.com/" >asd<i class="fa-brands fa-square-github fa-lg" ></i></a></li>
             </ul>
