--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <!-- Nav start -->
-  <nav class="bg-slate-900 p-6 m-5">
+  <nav class="bg-zinc-900 p-6 m-5">
     <div class="flex flex-wrap items-center justify-between">
       <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="./asserts/uzchessLogo.png" class="h-14" alt="Flowbite Logo" />
@@ -80,7 +80,7 @@
         </div>
         <div class="grid grid-cols-3 gap-6 p-6">
 
-          <div class="overflow-hidden relative bg-gray-900 rounded-md p-3">
+          <div class="overflow-hidden relative bg-zinc-900 rounded-md p-3">
 
             <img src="./asserts/nodirbek.png" class="w-full sm:h-32 object-cover rounded-md">
 
@@ -96,7 +96,7 @@
             </div>
           </div>
 
-          <div class="overflow-hidden relative bg-gray-900 rounded-md p-3">
+          <div class="overflow-hidden relative bg-zinc-900 rounded-md p-3">
 
             <img src="./asserts/trener.png" class="w-full sm:h-32 object-cover rounded-md">
 
@@ -112,7 +112,7 @@
             </div>
           </div>
 
-          <div class="overflow-hidden relative bg-gray-900 rounded-md p-3">
+          <div class="overflow-hidden relative bg-zinc-900 rounded-md p-3">
 
             <img src="./asserts/komanda.png" class="w-full sm:h-32 object-cover rounded-md">
 
@@ -128,7 +128,7 @@
             </div>
           </div>
 
-          <div class="overflow-hidden relative bg-gray-900 rounded-md p-3">
+          <div class="overflow-hidden relative bg-zinc-900 rounded-md p-3">
 
             <img src="./asserts/komanda.png" class="w-full sm:h-32 object-cover rounded-md">
 
@@ -144,7 +144,7 @@
             </div>
           </div>
 
-          <div class="overflow-hidden relative bg-gray-900 rounded-md p-3">
+          <div class="overflow-hidden relative bg-zinc-900 rounded-md p-3">
 
             <img src="./asserts/chessdesk.png" class="w-full sm:h-32 object-cover rounded-md">
 
@@ -160,7 +160,7 @@
             </div>
           </div>
 
-          <div class="overflow-hidden relative bg-gray-900 rounded-md p-3">
+          <div class="overflow-hidden relative bg-zinc-900 rounded-md p-3">
 
             <img src="./asserts/president.png" class="w-full sm:h-32 object-cover rounded-md">
 
@@ -176,7 +176,7 @@
             </div>
           </div>
 
-          <div class="overflow-hidden relative bg-gray-900 rounded-md p-3">
+          <div class="overflow-hidden relative bg-zinc-900 rounded-md p-3">
 
             <img src="./asserts/trener.png" class="w-full sm:h-32 object-cover rounded-md">
 
@@ -192,7 +192,7 @@
             </div>
           </div>
 
-          <div class="overflow-hidden relative bg-gray-900 rounded-md p-3">
+          <div class="overflow-hidden relative bg-zinc-900 rounded-md p-3">
 
             <img src="./asserts/vuzgaradok.png" class="w-full sm:h-32 object-cover rounded-md">
 
@@ -208,7 +208,7 @@
             </div>
           </div>
 
-          <div class="overflow-hidden relative bg-gray-900 rounded-md p-3">
+          <div class="overflow-hidden relative bg-zinc-900 rounded-md p-3">
 
             <img src="./asserts/komanda.png" class="w-full sm:h-32 object-cover rounded-md">
 
@@ -243,7 +243,7 @@
 
         </div>
 
-        <div class="mt-6 p-4 h-auto bg-slate-900  rounded-lg">
+        <div class="mt-6 p-4 h-auto bg-zinc-900  rounded-lg">
           <h1 class="text-xl font-bold ">Top kitoblar</h1>
 
           <div class="grid grid-cols-1 mt-3">
@@ -300,82 +300,63 @@
             </div>
 
 
-
-
-
           </div>
         </div>
 
-
-        <!-- 
-          <figure class="md:flex bg-slate-100 rounded-xl p-8 md:p-0 dark:bg-slate-800">
-            <img class="w-24 h-24 md:w-48 md:h-auto md:rounded-none rounded-full mx-auto" src="/sarah-dayan.jpg" alt="" width="384" height="512">
-            <div class="pt-6 md:p-8 text-center md:text-left space-y-4">
-              <blockquote>
-                <p class="text-lg font-medium">
-                  “Tailwind CSS is the only framework that I've seen scale
-                  on large teams. It’s easy to customize, adapts to any design,
-                  and the build size is tiny.”
-                </p>
-              </blockquote>
-              <figcaption class="font-medium">
-                <div class="text-sky-500 dark:text-sky-400">
-                  Sarah Dayan
-                </div>
-                <div class="text-slate-700 dark:text-slate-500">
-                  Staff Engineer, Algolia
-                </div>
-              </figcaption>
-            </div>
-          </figure> -->
       </div>
 
 
   </div>
+  <!-- News card end -->
 
 
-  </main>
-  </div>
-  <!-- News card -->
+  <footer class="bg-zinc-900 grid grid-cols-1 pt-7">
+    
+    <div class=" flex items-center justify-center">
+      <img class="justify-center items-end" src="./asserts/uzchessLogo.png" alt="logo" >
+  
+    </div>
 
-  </div>
+    <div class="mt-3">
+      <ul
+          class="flex flex-col justify-center font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0">
+          <li>
+            <a href="#" class="block py-2 px-3 md:p-0 text-white rounded md:bg-transparent
+              opacity-50" aria-current="page">Biz haqimizda</a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700
+            opacity-50">Cookie fayllari siyosati</a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 px-3 md:p-0 text-gray-900  hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700
+              opacity-50">Foydalanish qoidalari</a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700
+              opacity-50">Brend resurslari</a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 px-3 md:p-0 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700
+            opacity-50">Cookie fayllari siyosati</a>
+          </li>
+        </ul>
+    </div>
 
+    <div class="flex justify-center space-x-5 md:mt-4">
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-telegram"></i>
+      <i class="fa-brands fa-youtube"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-facebook"></i>
+    </div>
+  
+    <div class="border-3 border-black mt-2 p-3 mx-3 justify-between flex">
+      <h2 class="">@ Uzchess. All rights reserved</h2>
+      <h2>Foydalanish qoidalari</h2>
 
-
-  <!-- <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-  <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
-  </a>
-  <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-      <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Get started</button>
-      <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-    </button>
-  </div>
-  <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-    <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-      <li>
-        <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
-      </li>
-      <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
-      </li>
-      <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
-      </li>
-      <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
-      </li>
-    </ul>
-  </div>
-  </div>
-</nav> -->
-
+    </div>
+  </footer>
 
 
 </body>
