feat: news_detail

--- a/src/news.html
+++ b/src/news.html
@@ -12,7 +12,7 @@
 <body class="bg-black text-white">
 
   <!-- Nav start -->
-  <nav class="bg-zinc-900 p-6 m-5">
+  <nav class="bg-zinc-900 p-6 m-5 rounded-xl">
     <div class="flex flex-wrap items-center justify-between">
       <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="./asserts/uzchessLogo.png" class="h-14" alt="Flowbite Logo" />
