--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/0e35ab6147.js" crossorigin="anonymous"></script>
+
+
+    <title>React</title>
   </head>
-  <body>
+  <body class="bg-black text-white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
